<resources>
    <string name="app_name">Fallout Friend</string>

    <!--Bottom Navigation-->
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_alert">Alert</string>
    <string name="title_profile">Profile</string>

    <!--Main Activity-->
    <string name="recommended_title">Recommendations</string>
    <string name="recommended_subtitle">Curated plans based on your profile</string>
    <string name="progress_title_start">Get Started</string>
    <string name="progress_title_in_progress">Keep Going</string>
    <string name="progress_subtitle_in_progress">You\'ve completed 2 out of 3 steps</string>
    <string name="course_level">BEGINNER</string>
    <string name="course_name">Earthquakes</string>
    <string name="social_pull">142 neighbors finished this plan.</string>
    <string name="progress_no_course_in_progress">Pick a new plan</string>
    <string name="progress_subtitle_no_course_in_progress">Plans recommended just for you</string>
    <string name="title_activity_date_picker">DatePicker</string>

    <!--Account Setup Activity-->
    <string name="account_setup_title">Account Setup</string>
    <string name="account_setup_description">Fill out your form so that we can personalize your preparedness plan
    </string>

    <string name="account_setup_personal_info">Personal Info</string>
    <string name="account_setup_preferences">Preferences</string>
    <string name="account_setup_household">Household</string>

    <!--General-->
    <string name="next_step_button">Next: %1s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_family_members_title">Add your family members.</string>
    <string name="i_have_none_button_text">I have none</string>
    <string name="add_text">Add</string>
    <string name="see_more_button">See more plans</string>

    <string name="course_details_title">Course Details</string>

    <!--Earthquake course-->
    <string name="earthquake_title">Earthquakes</string>
    <string name="earthquake_course_description">An earthquake is the sudden rapid shaking of the earth. Earthquakes can cause buildings to collapse and cause heavy items to fall, resulting in injuries.</string>
    <string name="earthquake_text_1">Practice Drop, Cover, Hold on</string>
    <string name="earthquake_text_2">Secure items to wall</string>
    <string name="earthquake_text_3">Store heavy objects</string>
    <string name="earthquake_text_4">Make a supply kit</string>
    <string name="earthquake_text_5">Create an emergency communications plan</string>
    <string name="earthquake_text_6">Bonus: Earthquake insurance</string>
    <string name="earthquake_text_7">Bonus: Fix structural issues</string>
</resources>
