<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AccountSetupActivity">

    <ImageButton
            android:id="@+id/path_icon"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="@dimen/element_margin_extra_large"
            android:layout_marginEnd="@dimen/element_margin_extra_large"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/family"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/path_icon"
              android:textSize="@dimen/text_size_lg"
              android:layout_marginStart="@dimen/element_margin_large"
              android:text="@string/account_setup_title"
              android:id="@+id/account_setup_title"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/account_setup_title"
              android:textSize="@dimen/text_size_med"
              android:layout_marginStart="@dimen/element_margin_large"
              android:text="@string/account_setup_description"
              android:id="@+id/account_setup_description"/>

    <CheckedTextView
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_marginStart="96dp"
            android:layout_marginEnd="96dp"
            android:layout_height="wrap_content"
            android:id="@+id/personal_info_task"
            android:gravity="center"
            android:layout_marginTop="@dimen/element_margin_large"
            android:text="@string/account_setup_personal_info"
            android:checkMark="@drawable/ic_check_black_24dp"
            android:textSize="@dimen/text_size_lg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_setup_description"/>

    <CheckedTextView
            android:layout_width="match_parent"
            android:layout_marginStart="96dp"
            android:layout_marginEnd="96dp"
            android:layout_height="wrap_content"
            android:id="@+id/preferences_task"
            android:checked="false"
            android:gravity="center"
            android:checkMark="@drawable/ic_check_black_24dp"
            android:layout_marginTop="@dimen/element_margin_large"
            android:text="@string/account_setup_preferences"
            android:textSize="@dimen/text_size_lg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personal_info_task"/>

    <CheckedTextView
            android:layout_width="match_parent"
            android:layout_marginStart="96dp"
            android:layout_marginEnd="96dp"
            android:layout_height="wrap_content"
            android:id="@+id/household_task"
            android:layout_marginTop="@dimen/element_margin_large"
            android:text="@string/account_setup_household"
            android:gravity="center"
            android:checked="false"
            android:textSize="@dimen/text_size_lg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preferences_task"/>

    <Button
            android:id="@+id/begin_next_step"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/next_step_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>