<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="parent"
              android:textSize="@dimen/text_size_lg"
              android:layout_marginStart="@dimen/element_margin_large"
              android:text="@string/progress_title_in_progress"
              android:textAllCaps="true"
              android:id="@+id/recommended_title"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/recommended_title"
              android:textSize="@dimen/text_size_med"
              android:layout_marginStart="@dimen/element_margin_large"
              android:text="@string/progress_subtitle_in_progress"
              android:id="@+id/recommended_sub_title"/>

    <ImageButton
            android:id="@+id/progress_button"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="@dimen/element_margin_extra_large"
            android:layout_marginEnd="@dimen/element_margin_extra_large"
            android:alpha="1.5"
            android:scaleType="center"
            app:layout_constraintTop_toBottomOf="@id/recommended_sub_title"
            android:src="@drawable/earthquake"/>

    <TextView
            android:id="@+id/course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:inputType="textPersonName"
            android:text="@string/course_name"
            android:textAppearance="@style/CourseName"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/progress_button"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="@+id/progress_button"
            app:layout_constraintTop_toBottomOf="@+id/course_level" />

    <TextView
            android:id="@+id/course_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/course_level"
            android:textAppearance="@style/CourseLevelMain"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/progress_button"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="@+id/progress_button"
            app:layout_constraintTop_toBottomOf="@+id/recommended_sub_title" />

</androidx.constraintlayout.widget.ConstraintLayout>