<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/element_margin_large"
        android:layout_height="match_parent">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="parent"
              android:textSize="@dimen/text_size_lg"
              android:text="@string/recommended_title"
              android:textAllCaps="true"
              android:layout_marginStart="@dimen/element_margin_large"
              android:id="@+id/recommended_title"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="@dimen/text_size_small"
              android:text="@string/recommended_subtitle"
              android:layout_marginStart="@dimen/element_margin_large"
              app:layout_constraintStart_toStartOf="@id/recommended_title"
              app:layout_constraintTop_toBottomOf="@id/recommended_title"
              android:id="@+id/recommended_subtitle"/>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/recommended_subtitle"
            android:id="@+id/recyclerview"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/see_more_button"
            android:text="@string/see_more_button"
            android:layout_marginTop="@dimen/element_margin_medium"
            app:layout_constraintTop_toBottomOf="@id/recyclerview"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ButtonStyle"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>