<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HouseholdList">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_family_members_title"
            android:id="@+id/listViewPlaceholder"
            android:layout_marginTop="52dp"
            android:layout_marginStart="@dimen/element_margin_large"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonAddFam"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/text_size_lg"/>
    <Button
            android:text="@string/add_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAddFam"
            app:layout_constraintTop_toBottomOf="@+id/listViewPlaceholder"
            android:textSize="@dimen/text_size_med"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/i_have_none_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/noFam"
            app:layout_constraintTop_toBottomOf="@+id/buttonAddFam"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="@dimen/text_size_med"/>

</androidx.constraintlayout.widget.ConstraintLayout>