<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/pageBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/element_margin_large"
            app:layout_constraintBottom_toTopOf="@id/begin_next_step"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/pageBackground"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/element_margin_medium"
                android:layout_marginEnd="@dimen/element_margin_medium"
                android:layout_marginBottom="100dp">

            <ImageButton
                    android:id="@+id/course_icon"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="@dimen/element_margin_large"
                    android:layout_marginEnd="@dimen/element_margin_large"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/earthquake"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@id/course_icon"
                      app:layout_constraintStart_toStartOf="@id/course_icon"
                      android:layout_marginStart="@dimen/text_size_med"
                      android:textSize="@dimen/text_size_lg"
                      android:text="@string/earthquake_title"
                      android:id="@+id/course_title"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/course_level"
                      tools:text="Beginner"
                      android:text="Beginner"
                      app:layout_constraintTop_toBottomOf="@id/course_title"
                      app:layout_constraintStart_toStartOf="@id/course_title"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="@dimen/text_size_med"
                      app:layout_constraintTop_toBottomOf="@id/course_level"
                      app:layout_constraintStart_toStartOf="@id/course_title"
                      app:layout_constraintEnd_toEndOf="@id/course_title"
                      android:text="@string/earthquake_course_description"
                      tools:text="@string/earthquake_course_description"
                      android:id="@+id/course_description"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/course_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/details_recyclerview"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
            android:id="@+id/begin_next_step"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/next_step_button"
            android:layout_margin="@dimen/element_margin_large"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>